[gd_scene load_steps=7 format=3 uid="uid://kq2w2jlbikqt"]

[ext_resource type="Script" path="res://scenes/item/enemy_item.gd" id="1_rhmn5"]
[ext_resource type="Texture2D" uid="uid://ymi0rabpy8sr" path="res://assets/tilemap_packed.png" id="2_7cxbi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vryns"]
radius = 18.0

[sub_resource type="Animation" id="Animation_lfq0i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_uieku"]
resource_name = "active"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5no8k"]
_data = {
"RESET": SubResource("Animation_lfq0i"),
"active": SubResource("Animation_uieku")
}

[node name="EnemyItem" type="Area2D"]
process_mode = 3
script = ExtResource("1_rhmn5")

[node name="Visuals" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Icon" type="Sprite2D" parent="Visuals"]
unique_name_in_owner = true
texture = ExtResource("2_7cxbi")
region_enabled = true
region_rect = Rect2(112, 128, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vryns")

[node name="TooltipPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-108, 0)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
process_mode = 1
visible = false
offset_left = -30.0
offset_top = -16.0
offset_right = -20.0
offset_bottom = 16.0
fill_mode = 3
show_percentage = false

[node name="ItemTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 1
libraries = {
"": SubResource("AnimationLibrary_5no8k")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="ItemTimer" to="." method="_on_item_timer_timeout"]
